<resources>
    <string name="app_name">RemindMe</string>
    <string name="search_title">Search</string>
    <string name="empty_list_text">Empty task list</string>

    <string name="menu_item_notification">Напоминания</string>
    <string name="menu_item_favorite">Избранное</string>
    <string name="menu_item_archive">Архив</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_info">Справка</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
</resources>
